# olapdb

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/olapdb/: __init__.py  connection.py  cursor.py  dbapi.py  dialect.py
tests/: test_connection.py
